# http-server-c

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  index.html  main.c
examples/00-minimal/: Makefile  main.c
examples/01-getaddrinfo/: Makefile  main.c
examples/02-open-client/: confirm_conn_server.py  main.c
examples/03-open-server/: CMakeLists.txt
examples/04-dummy-http-response/: main.c
examples/05-tokenize-http-request/: CMakeLists.txt  main.c
examples/05-tokenizing-and-assembling/: CMakeLists.txt  main.c
examples/06-sendfile/: CMakeLists.txt  index.html  main.c
lib/: CMakeLists.txt  address.c  address.h  address_info.c  address_info.h  connection.c  connection.h  connection_tcp.c  connection_tcp.h  error.c  error.h  error_utils.h  http_server.c  http_server.h  iter_addrinfo.c  iter_addrinfo.h  message.c  message.h
lib/types/: arena.c  arena.h  csview.c  csview.h  csview_htable.c  csview_htable.h
src/: error.c  error.h  iter_addrinfo.c  iter_addrinfo.h  main.c
src/00-minimal/: CMakeLists.txt  Makefile  main.c
src/01-getaddrinfo/: CMakeLists.txt  main.c
src/02-open-client/: CMakeLists.txt  main.c
src/03-open-server/: confirm_conn_client.py  main.c
src/04-dummy-http-response/: CMakeLists.txt  main.c
